# CaptureScreen

./: .gitignore  CMakeLists.txt  CaptureScreen.sln  CaptureScreen.vcxproj  CaptureScreen.vcxproj.filters  CaptureScreenUI.cpp  CaptureScreenUI.h  CaptureScreenUI.ui  QtGuiApplication3.ui  QtGuiApplication3.vcxproj  QtGuiApplication3.vcxproj.filters  README.md  main.cpp
